# quaerere-base-client

./: .gitignore  README.rst  VERSION  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
docs/: api.rst  conf.py  index.rst
quaerere_base_client/: __init__.py  api.py  client.py  exceptions.py  model.py  resource.py
tests/: test_resource.py
