[bumpversion]
current_version = 0.1.0rc1
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)((?P<pre_release>\.dev|a|b|rc)(?P<pre_release_num>\d+))?
serialize =
	{major}.{minor}.{patch}{pre_release}{pre_release_num}
	{major}.{minor}.{patch}

[metadata]
author = Caitlyn O'Hanna
author_email = ravenoak@virtualxistenz.com
description = Common elements used in the Quaerere Platform clients
long_description = file: README.rst
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
license = AGPLv3+
license_file = LICENSE.txt
project_urls =
    Documentation = http://quaerere-base-client.readthedocs.io/
    Source Code = https://github.com/QuaererePlatform/quaerere-base-client
url = https://github.com/QuaererePlatform/quaerere-base-client

[aliases]
test = pytest

[bdist_wheel]
universal = True

[options]
python_requires = >= 3.6
packages = find:

[options.packages.find]
exclude =
    docs
    tests

[bumpversion:file:VERSION]
search = ^{current_version}$
replace = {new_version}

[bumpversion:part:pre_release]
first_value = .dev
optional_value = b
values =
	.dev
	a
	b
	rc

[build_sphinx]

[tool:pytest]
testpaths = tests
addopts = --cov=quaerere_base_client --flake8

[coverage:run]
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:html]

[coverage:xml]

